# chat-bot

./: bot_00.py  bot_02.py  bot_03.py  bot_04.py  bot_05.py  bot_06.py  bot_07.py  bot_08.py  bot_10.py  main.py  pinecone-browser.py  pinecone-uploader-v2.py  pinecone-uploader.py  pyproject.toml  rag_api.py
agent/: agent_00.py  agent_01.py  agent_02.py
