[project]
name = "llm-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "langfuse>=3.7.0",
    "openai>=2.14.0",
    "pinecone>=7.3.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "yagmail>=0.15.293",
]
